--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "guildhaven-discord-hallway",
   "version": "1.0.0",
+  "description": "GuildHaven Discord OAuth hallway: joins guild + assigns role",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
 }
+
+
