--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
   "name": "guildhaven-discord-hallway",
   "version": "1.0.0",
-  "description": "GuildHaven Discord OAuth hallway: joins guild + assigns role",
-  "main": "index.js",
   "type": "module",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "engines": {
-    "node": ">=18"
-  },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2"
   }
 }
-
-
